--- a/style.css
+++ b/style.css
@@ -5,18 +5,436 @@ body {
   color: rgb(0 219 55);
   background-color: rgb(14 14 19);
   font-family: Arial, sans-serif;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  min-height: 100vh;
+  margin: 0 auto;
+  width: 100%;
+  font-weight: bold;
 }
 .topside {
+  width: 80%;
+  margin-left: 10%;
   display: flex;
   background-color: rgb(5 5 10);
   justify-content: space-between;
   align-items: center;
 }
+.topside .logo {
+  color: black;
+  background-color: rgb(0 219 55);
+  border-radius: 100px;
+  padding-top: 4px;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-left: 10px;
+}
+.topside h1 {
+  font-size: 20px;
+  padding: 10px 0;
+}
 .topside .right-top {
+  font-size: 10px;
   display: flex;
   align-items: center;
   background-color: rgb(10 30 20);
   border-radius: 20px;
   margin-right: 2%;
   padding: 0 10px;
+  padding-right: 20px;
+  border: 1px solid;
+}
+.small-dot {
+  width: 15px;
+}
+.big-dot {
+  animation: big-dot 1.5s ease infinite;
+}
+@keyframes big-dot {
+  0% {
+    color: rgb(0 219 55);
+  }
+  50% {
+    color: rgb(5, 68, 21);
+  }
+}
+.display {
+  background-image: linear-gradient(#000, #040, #020);
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 15%;
+  height: 30%;
+  position: absolute;
+  top: 27%;
+  left: 22%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  box-shadow:
+    0 0 5px rgba(255, 255, 255, 0.3),
+    0 0 5px rgba(0, 128, 0, 0.3),
+    inset 0 0 5px rgba(255, 255, 255, 0.3),
+    inset 0 0 5px rgba(0, 128, 0, 0.3);
+}
+
+.scanner__wrapper {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  clip-path: circle();
+}
+
+.scanner {
+  width: 50%;
+  height: 50%;
+  position: absolute;
+  background-image: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0.3),
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 0)
+  );
+  top: 25%;
+  left: 25%;
+  transform: rotateZ(0deg) translate(50%, 50%);
+  clip-path: polygon(0 0, 0% 0%, 100% 100%, 0% 100%);
+  animation: scanner 4s linear infinite;
+}
+
+@keyframes scanner {
+  from {
+    transform: rotateZ(0deg) translate(50%, 50%);
+  }
+  to {
+    transform: rotateZ(360deg) translate(50%, 50%);
+  }
+}
+
+.ping {
+  position: absolute;
+  cursor: pointer;
+}
+
+.ping__dot {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background-color: #0f0;
+  cursor: pointer;
+  transition: 300ms ease-in-out;
+  animation: ping__dot 1s linear infinite;
+  animation-delay: calc(var(--delay) * 500ms);
+}
+
+@keyframes ping__dot {
+  from {
+    box-shadow:
+      0 0 0 2px rgba(0, 0, 0, 1),
+      0 0 0 4px rgba(0, 255, 0, 1),
+      0 0 0 6px rgba(0, 0, 0, 1),
+      0 0 0 8px rgba(0, 255, 0, 0.5),
+      0 0 4px 10px rgba(0, 255, 0, 1);
+  }
+  to {
+    box-shadow:
+      0 0 0 2px rgba(0, 0, 0, 0),
+      0 0 0 4px rgba(0, 255, 0, 0),
+      0 0 0 6px rgba(0, 0, 0, 0),
+      0 0 0 8px rgba(0, 255, 0, 0),
+      0 0 4px 10px rgba(0, 255, 0, 0);
+  }
+}
+
+.ping__caption {
+  position: relative;
+  border: 2px dotted #060;
+  padding: 8px;
+  color: #080;
+  display: inline-block;
+  transition: 300ms ease-in-out;
+  transform: scale(0, 0) translate(48px, -48px);
+  transform-origin: left;
+  cursor: pointer;
+}
+
+.ping:hover .ping__caption {
+  transform: scale(1, 1) translate(48px, -48px);
+}
+
+.ping__caption:hover {
+  color: rgba(255, 255, 255, 0.6);
+  text-shadow: 0 0 2px rgba(0, 255, 0, 0.3);
+}
+
+.ping__caption:active {
+  outline: 2px dotted #060;
+  outline-offset: 2px;
+}
+
+.ping__caption::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 128, 0, 0.3);
+  z-index: -1;
+  transform-origin: left;
+  transform: scaleX(0);
+  transition: 1000ms ease-in-out;
+}
+
+.ping__caption:hover::after {
+  transform: scaleX(1);
+}
+.header-main {
+  width: 76%;
+  margin-left: 12%;
+  background-color: rgb(20 15 30);
+  display: flex;
+  justify-content: center;
+  padding: 1.5% 0;
+  border-radius: 30px;
+  padding-bottom: 5.5%;
+  border: 1px solid rgb(39 44 49);
+}
+.header-main:hover {
+  border: 1px solid rgb(0 219 55);
+}
+.right-header-main {
+  margin-left: 17%;
+}
+.header-main h2 {
+  font-size: 40px;
+}
+.header-main p {
+  margin: -20px 0;
+  color: rgb(83 81 92);
+}
+.buttons {
+  width: 76%;
+  margin-left: 11%;
+  display: flex;
+  gap: 1%;
+  padding: 0 20px;
+  padding-top: 30px;
+}
+.buttons a {
+  color: rgb(150 156 160);
+  text-decoration: none;
+}
+.new-brief {
+  padding: 10px 40px;
+  border-radius: 50px;
+  border: 1px solid rgb(39 44 49);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: rgb(20 15 30);
+}
+.new-brief p {
+  margin-left: 10px;
+}
+.decode {
+  padding: 10px 40px;
+  border-radius: 50px;
+  border: 1px solid rgb(39 44 49);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: rgb(20 15 30);
+}
+.decode p {
+  margin-left: 10px;
+}
+.request-drone {
+  padding: 10px 40px;
+  border-radius: 50px;
+  border: 1px solid rgb(39 44 49);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: rgb(20 15 30);
+}
+.request-drone p {
+  margin-left: 10px;
+}
+.cards {
+  font-size: 13px;
+  margin: 0 11%;
+  display: flex;
+  padding: 30px 20px;
+  justify-content: space-between;
+}
+.a {
+  background-color: rgb(1 220 61);
+  width: 65px;
+  height: 10px;
+}
+.percentage {
+  display: flex;
+  gap: 5px;
+}
+.percentage div {
+  background-color: rgb(44 40 50);
+  border-radius: 30px;
+  width: 250px;
+  height: 10px;
+}
+.cards a {
+  color: rgb(150 156 160);
+  text-decoration: none;
+}
+.top-card {
+  padding-left: 10px;
+  padding-top: 10px;
+}
+.top-card .status {
+  padding-right: 13px;
+  font-size: 10px;
+}
+
+.operation-nightfall {
+  border-radius: 30px;
+  border: 1px solid rgb(39 44 49);
+  background-color: rgb(20 15 30);
+  padding: 10px 0px 10px 10px;
+}
+.operation-nightfall .top-card {
+  display: flex;
+  gap: 190px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.signal-intercept-aipha {
+  border-radius: 30px;
+  border: 1px solid rgb(39 44 49);
+  background-color: rgb(20 15 30);
+  padding: 10px 0px 10px 10px;
+}
+.signal-intercept-aipha .top-card {
+  display: flex;
+  gap: 190px;
+  justify-content: space-between;
+  align-items: center;
+}
+.asset-recovery {
+  border-radius: 30px;
+  border: 1px solid rgb(39 44 49);
+  background-color: rgb(20 15 30);
+  padding: 10px 0px 10px 10px;
+}
+.asset-recovery .top-card {
+  gap: 190px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.cyber-defense-grid {
+  border-radius: 30px;
+  border: 1px solid rgb(39 44 49);
+  background-color: rgb(20 15 30);
+  padding: 10px 0px 10px 10px;
+}
+.cyber-defense-grid .top-card {
+  gap: 190px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.level1 {
+  background-color: rgb(35 15 25);
+  color: rgb(179 52 89);
+  border-radius: 10px;
+  border: 2px solid rgb(90 21 41);
+  padding: 10px 10px;
+}
+.level2 {
+  background-color: rgb(64 50 15);
+  color: rgb(189 142 52);
+  border-radius: 10px;
+  border: 2px solid rgb(130 100 32);
+  padding: 10px 10px;
+}
+.level3 {
+  background-color: rgb(4 65 24);
+  color: rgb(43 165 75);
+  border-radius: 10px;
+  border: 2px solid rgb(27 129 57);
+  padding: 10px 10px;
+}
+.red-button a {
+  text-decoration: none;
+  color: rgb(179 52 89);
+  width: 76%;
+  margin-left: 12%;
+  display: flex;
+  background-color: rgb(35 15 25);
+  border-radius: 20px;
+  border: 2px solid rgb(90 21 41);
+}
+.dot {
+  width: 40px;
+  height: 40px;
+}
+.red-button h2 {
+  margin-left: 40%;
+}
+.navbar {
+  margin-top: 45px;
+  padding-left: 14.5%;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  background-color: #000;
+  justify-content: space-between;
+}
+.navbar a {
+  color: rgb(93 93 101);
+  text-decoration: none;
+}
+.navbar a .dashboard {
+  text-decoration: n;
+  color: rgb(0 219 55);
+}
+.question-mark {
+  color: rgb(93 93 101);
+  position: fixed;
+  right: 1%;
+  bottom: 2.5%;
+  border: 1px solid;
+  padding: 6px;
+  border-radius: 100px;
+}
+.navbar a {
+  padding-top: 10px;
+  text-decoration: none;
+}
+.navbar a .dashboard {
+  font-size: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.navbar a .feed {
+  font-size: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.navbar .brief {
+  font-size: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
